--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <script src="node_modules/rot-js/dist/rot.min.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/screen.js"></script>
 </body>
 </html>
