--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
     <script src="node_modules/rot-js/dist/rot.min.js"></script>
-    <script src="scripts/main.js"></script>
-    <script src="scripts/screen.js"></script>
+    <script src="public/scripts/glyph.js"></script>
+    <script src="public/scripts/tiles.js"></script>
+    <script src="public/entities/entity.js"></script>
+    <script src="public/entities/player.js"></script>
+    <script src="public/scripts/builder.js"></script>
+    <script src="public/scripts/map.js"></script>
+    <script src="public/scripts/screen.js"></script>
+    <script src="public/scripts/main.js"></script>
 </body>
 </html>
