--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="node_modules/rot-js/dist/rot.min.js"></script>
     <script src="public/scripts/glyph.js"></script>
     <script src="public/scripts/tiles.js"></script>
+    <script src="public/scripts/mixins/playerActor.js"></script>
     <script src="public/entities/entity.js"></script>
     <script src="public/entities/player.js"></script>
     <script src="public/scripts/builder.js"></script>
