--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="public/scripts/glyph.js"></script>
     <script src="public/scripts/tiles.js"></script>
     <script src="public/scripts/mixins/playerActor.js"></script>
+    <script src="public/scripts/mixins/moveable.js"></script>
     <script src="public/entities/entity.js"></script>
     <script src="public/entities/player.js"></script>
     <script src="public/scripts/builder.js"></script>
