--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="node_modules/rot-js/dist/rot.min.js"></script>
     <script src="public/scripts/glyph.js"></script>
     <script src="public/scripts/tiles.js"></script>
+    <script src="public/scripts/gameInput.js"></script>
     <script src="public/scripts/mixins/playerActor.js"></script>
     <script src="public/scripts/mixins/moveable.js"></script>
     <script src="public/entities/entity.js"></script>
