Added zombie attack

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <script src="public/scripts/tiles.js"></script>
     <script src="public/scripts/gameInput.js"></script>
     <script src="public/scripts/mixins/playerActor.js"></script>
+    <script src="public/scripts/mixins/zombieActor.js"></script>
     <script src="public/scripts/mixins/moveable.js"></script>
+    <script src="public/scripts/mixins/destructible.js"></script>
+    <script src="public/scripts/mixins/attacker.js"></script>
     <script src="public/entities/entity.js"></script>
     <script src="public/entities/player.js"></script>
+    <script src="public/entities/zombie.js"></script>
     <script src="public/scripts/builder.js"></script>
     <script src="public/scripts/map.js"></script>
     <script src="public/scripts/screen.js"></script>
