Added win condition

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="public/scripts/gameInput.js"></script>
     <script src="public/scripts/mixins/playerActor.js"></script>
     <script src="public/scripts/mixins/zombieActor.js"></script>
+    <script src="public/scripts/mixins/enemy.js"></script>
     <script src="public/scripts/mixins/moveable.js"></script>
     <script src="public/scripts/mixins/destructible.js"></script>
     <script src="public/scripts/mixins/attacker.js"></script>
