--- a/index.html
+++ b/index.html
@@ -9,21 +9,25 @@
 </head>
 <body>
     <script src="node_modules/rot-js/dist/rot.min.js"></script>
-    <script src="public/scripts/glyph.js"></script>
-    <script src="public/scripts/tiles.js"></script>
-    <script src="public/scripts/gameInput.js"></script>
-    <script src="public/scripts/mixins/playerActor.js"></script>
-    <script src="public/scripts/mixins/zombieActor.js"></script>
-    <script src="public/scripts/mixins/enemy.js"></script>
-    <script src="public/scripts/mixins/moveable.js"></script>
-    <script src="public/scripts/mixins/destructible.js"></script>
-    <script src="public/scripts/mixins/attacker.js"></script>
-    <script src="public/entities/entity.js"></script>
-    <script src="public/entities/player.js"></script>
-    <script src="public/entities/zombie.js"></script>
-    <script src="public/scripts/builder.js"></script>
-    <script src="public/scripts/map.js"></script>
-    <script src="public/scripts/screen.js"></script>
-    <script src="public/scripts/main.js"></script>
+    <script src="src/glyph.js"></script>
+    <script src="src/tiles.js"></script>
+    <script src="src/gameInput.js"></script>
+    <script src="src/mixins/playerActor.js"></script>
+    <script src="src/mixins/zombieActor.js"></script>
+    <script src="src/mixins/enemy.js"></script>
+    <script src="src/mixins/moveable.js"></script>
+    <script src="src/mixins/destructible.js"></script>
+    <script src="src/mixins/attacker.js"></script>
+    <script src="src/entities/entity.js"></script>
+    <script src="src/entities/player.js"></script>
+    <script src="src/entities/zombie.js"></script>
+    <script src="src/builder.js"></script>
+    <script src="src/map.js"></script>
+    <script src="src/screens/startScreen.js"></script>
+    <script src="src/screens/playScreen.js"></script>
+    <script src="src/screens/victoryScreen.js"></script>
+    <script src="src/screens/loseScreen.js"></script>
+    <script src="src/screens/helpScreen.js"></script>
+    <script src="src/main.js"></script>
 </body>
 </html>
