--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <script src="node_modules/rot-js/dist/rot.min.js"></script>
+    <script src="public/rot.min.js"></script>
     <script src="src/glyph.js"></script>
     <script src="src/tiles.js"></script>
     <script src="src/gameInput.js"></script>
